--- a/report/report.tex
+++ b/report/report.tex
@@ -53,7 +53,27 @@
  
 \section*{Notations}
     \begin{tabular}{p{3cm}p{10cm}}
-    CoM & Centre of Mass
+        $x$ & Pose State Vector \\
+        $q$ & Joint State Vector \\
+        $m_i$ & mass of body $i$ \\
+        $M$ & Total mass of the robot \\
+        $\dot{q}$ & Joint Velocity Vector \\
+        $\ddot{q}$ & Joint Acceleration Vector \\
+        $\xi$ & generalized velocity vector \\
+        $\tau$ & Generalized torque \\
+        $M(\ddot{q})$ & Generalized Inertial Matrix of Robot \\
+        $c(q, \dot{q})$ & Vector of Coriolis, Centrifugal and Gravity \\
+        $I_i$ & Inertia matrix of body $i$ \\
+        $\mathbf{g}$ & Gravity vector \\
+         & \\
+        $P_{CoM}$ & Position of CoM of the robot \\
+        $P_{CoM_i}$ & Position of CoM of body $i$ \\
+        $P_{ZMP}$ & Position of ZMP \\
+         & \\
+        
+
+
+
     \end{tabular}
 
 \newpage
@@ -64,6 +84,8 @@
 CoM & Centre of Mass \\
 DoF & Degrees of Freedom \\
 ZMP & Zero Moment Point \\
+OSID & Operational Space Inverse Dynamics \\
+
 
 \end{tabular}
 
