--- a/report/state_of_the_art.tex
+++ b/report/state_of_the_art.tex
@@ -260,6 +260,7 @@ Newton Euler's method are detailed below %in the chapter \ref{chapter-3} under s
             \sum f_i &= m_i\dot{v_{CoM_i}} \\
             \sum m_{CoM_i} &= \mathbf{I}_{CoM_i}\dot{\omega_i} + \omega_i \times (I_{CoM_i}.\omega_i)
         \end{split}
+        \label{eq: NE}
     \end{align}
 
     where $\dot{v_{CoM_i}}$ is the acceleration of the CoM of body $i$; $\dot{\omega_i}$ is the angular acceleration of the body $i$ and $\mathbf{I_{CoM_i}}$ is the inertia matrix of body $i$.
