--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -326,4 +326,82 @@ and Khatib, Oussama},
   year         = {2003},
   organization = {IEEE}
 }
+
+% Chapter 3
+
+@inproceedings{sakka:hal-01054887,
+  title       = {{Tasks prioritization for whole-body realtime imitation of human motion by humanoid robots}},
+  author      = {Sakka, Sophie and Penna Poubel, Louise and Cehajic, Denis},
+  url         = {https://hal.archives-ouvertes.fr/hal-01054887},
+  booktitle   = {{Digital Intelligence (DI2014)}},
+  address     = {Nantes, France},
+  pages       = {5 p.},
+  year        = {2014},
+  month       = Sep,
+  keywords    = {Human ; humanoid ; motion imitation ; task prioritization ; inverse kinematics},
+  pdf         = {https://hal.archives-ouvertes.fr/hal-01054887/file/Sakka2014.pdf},
+  hal_id      = {hal-01054887},
+  hal_version = {v1}
+}
+
+@inproceedings{mukherjee2015inverse,
+  title        = {Inverse kinematics of a NAO humanoid robot using kinect to track and imitate human motion},
+  author       = {Mukherjee, Shohin and Paramkusam, Deepak and Dwivedy, Santosha K},
+  booktitle    = {2015 International Conference on Robotics, Automation, Control and Embedded Systems (RACE)},
+  pages        = {1--7},
+  year         = {2015},
+  organization = {IEEE}
+}
+
+@inproceedings{gucci:hal-01895145,
+  title       = {{Robust Real-time Whole-Body Motion Retargeting from Human to Humanoid}},
+  author      = {Penco, Luigi and Cl{\'e}ment, Brice and Modugno, Valerio and Hoffman, Enrico Mingo and Nava, Gabriele and Pucci, Daniele and Tsagarakis, Nikos and Mouret, Jean-Baptiste and Ivaldi, Serena},
+  url         = {https://hal.archives-ouvertes.fr/hal-01895145},
+  booktitle   = {{HUMANOIDS 2018 - IEEE-RAS 18th International Conference on Humanoid Robots}},
+  address     = {Beijing, China},
+  year        = {2018},
+  month       = Nov,
+  pdf         = {https://hal.archives-ouvertes.fr/hal-01895145/file/_LARGE__bf_Robust_Real_time_Whole_Body_Motion_Retargeting____from_Human_to_Humanoid.pdf},
+  hal_id      = {hal-01895145},
+  hal_version = {v1}
+}
+
+@inproceedings{brown2013control,
+  title     = {Control of rotational dynamics for ground behaviors},
+  author    = {Brown, David F and Macchietto, Adriano and Yin, KangKang and Zordan, Victor},
+  booktitle = {Proceedings of the 12th ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+  pages     = {55--61},
+  year      = {2013}
+}
+
+@book{khalil2004modeling,
+  title     = {Modeling, identification and control of robots},
+  author    = {Khalil, Wisama and Dombre, Etienne},
+  year      = {2004},
+  publisher = {Butterworth-Heinemann}
+}
+
+@article{khalilunified,
+  title  = {Unified Dynamic Modeling of Robots Using Newton-Euler Techniques},
+  author = {Khalil, Wisama}
+}
+
+@article{louisepouble,
+  title  = {Whole-body online Human motion imitation by a humanoid robot using task specification},
+  author = {Poubel, Louise},
+  year   = {2013}
+}
+
+@inproceedings{penco:hal-01895145,
+  title       = {{Robust Real-time Whole-Body Motion Retargeting from Human to Humanoid}},
+  author      = {Penco, Luigi and Cl{\'e}ment, Brice and Modugno, Valerio and Hoffman, Enrico Mingo and Nava, Gabriele and Pucci, Daniele and Tsagarakis, Nikos and Mouret, Jean-Baptiste and Ivaldi, Serena},
+  url         = {https://hal.archives-ouvertes.fr/hal-01895145},
+  booktitle   = {{HUMANOIDS 2018 - IEEE-RAS 18th International Conference on Humanoid Robots}},
+  address     = {Beijing, China},
+  year        = {2018},
+  month       = Nov,
+  pdf         = {https://hal.archives-ouvertes.fr/hal-01895145/file/_LARGE__bf_Robust_Real_time_Whole_Body_Motion_Retargeting____from_Human_to_Humanoid.pdf},
+  hal_id      = {hal-01895145},
+  hal_version = {v1}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
