--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -22,7 +22,7 @@
 \begin{center}
 	2020 / 2021\\
 	\lskip
-	Master Thesis - Midterm Report % or bibliography report
+	Master Thesis % or bibliography report
 	\lskip
 	
 	Presented by \lskip 
@@ -43,7 +43,7 @@
 
 \begin{tabular}{p{3cm}p{5cm}p{7cm} }
  % President: & Name & Position (Institution) \\ & & \\     % for final defense only (not bibliography)
-%  Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
+ Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
 % 	      & Name & Position (Institution) \\ 
 % 	      & Name & Position (Institution) \\ & & \\  & & \\ 
   Supervisor(s):  & Dr. Sophie Sakka & Assistant Professor (LS2N, ECN) \\
