Updated Report - Chapter 3

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -327,6 +327,17 @@ and Khatib, Oussama},
   organization = {IEEE}
 }
 
+@article{katic2003survey,
+  title     = {Survey of intelligent control techniques for humanoid robots},
+  author    = {Kati{\'c}, Du{\v{s}}ko and Vukobratovi{\'c}, Miomir},
+  journal   = {Journal of Intelligent and Robotic Systems},
+  volume    = {37},
+  number    = {2},
+  pages     = {117--141},
+  year      = {2003},
+  publisher = {Springer}
+}
+
 % Chapter 3
 
 @inproceedings{sakka:hal-01054887,
@@ -405,3 +416,5 @@ and Khatib, Oussama},
   hal_version = {v1}
 }
 @Comment{jabref-meta: databaseType:bibtex;}
+
+
