--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -418,3 +418,9 @@ and Khatib, Oussama},
 @Comment{jabref-meta: databaseType:bibtex;}
 
 
+@book{elhasairi2015humanoid,
+  title     = {Humanoid robot full-body control \& balance restoration},
+  author    = {Elhasairi, Ahmed I},
+  year      = {2015},
+  publisher = {University of Surrey (United Kingdom)}
+}
