Updated Report - Chapter 2

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -424,3 +424,12 @@ and Khatib, Oussama},
   year      = {2015},
   publisher = {University of Surrey (United Kingdom)}
 }
+
+@inproceedings{atkeson2007multiple,
+  title        = {Multiple balance strategies from one optimization criterion},
+  author       = {Atkeson, Christopher G and Stephens, Benjamin},
+  booktitle    = {2007 7th IEEE-RAS International Conference on Humanoid Robots},
+  pages        = {57--64},
+  year         = {2007},
+  organization = {IEEE}
+}
