Updated Report - Completed Chapter 2

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -433,3 +433,11 @@ and Khatib, Oussama},
   year         = {2007},
   organization = {IEEE}
 }
+
+@phdthesis{karthikmunirathinam,
+  title               = {{Different approaches in dynamic motion imitation from human being to a humanoid robot}},
+  author              = {Karthick Munirathinam, Sophie Sakka},
+  school              = {{Ecole Centrale de Nantes}},
+  year                = {2016},
+  type                = {Theses},
+}
